# dq-agent

./: .env.example  .gitignore  ACTION_PLAN.md  CLAUDE.md  LICENSE  README.md  langgraph.json  pyproject.toml
.claude/roles/: agent-chat-ui.md  hitl-driver.md  rule-author.md
.github/workflows/: tests.yml
app/: scoping_app.py
contracts/examples/: orders.yaml
data/synthetic/: orders.csv
registry/rules/: allowed_values.yaml  freshness.yaml  min_row_count.yaml  null_check.yaml  range_check.yaml  regex_match.yaml  type_conformance.yaml  unique_check.yaml
scripts/: explore_bedrock.py  scoping_cli.py
src/dq_agent/: connectors.py  engine.py  harness.py  models.py  profiler.py  registry.py  report.py
src/dq_agent/agents/: bedrock_chat.py  scoping.py  scoping_prompt.txt
src/dq_agent/engine/: __init__.py
src/dq_agent/registry/: __init__.py  loader.py
src/dq_agent/rules/: __init__.py  completeness.py  freshness.py  uniqueness.py  validity.py  volume.py
tests/: conftest.py  test_agents.py  test_bedrock_chat.py  test_connectors.py  test_engine.py  test_harness.py  test_models.py  test_profiler.py  test_registry.py  test_report.py
tests/rules/: test_completeness.py  test_freshness.py  test_uniqueness.py  test_validity.py  test_volume.py
