[project]
name = "dq-agent"
version = "0.1.0"
description = "Conversational data quality framework with a curated rule registry and deterministic execution engine"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = [
    "connectorx>=0.3.0",
    "pyarrow>=15.0.0",  # connectorx hands results to polars as Arrow tables
]
agents = [
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dq_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
