[project]
name = "dq-agent"
version = "0.1.0"
description = "Conversational data quality framework with a curated rule registry and deterministic execution engine"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = [
    "connectorx>=0.3.0",
    "pyarrow>=15.0.0",  # connectorx hands results to polars as Arrow tables
]
agents = [
    "langchain>=0.3.0",                # init_chat_model: provider is a config string, not code
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.2.0",     # `langgraph dev` serves the graph for agent-chat-ui
    # NB (feat/bedrock-proxy-adapter): this branch's default model is DeptBedrockChat,
    # which calls the internal `dwutils.bedrock` proxy. `dwutils` is an internal package,
    # not on PyPI, so it is NOT listed here — it is expected to be importable in the work
    # environment. langchain-google-genai is dropped (no Gemini path on this branch).
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dq_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live LLM call — requires DQ_AGENT_MODEL env var (deselected by default)",
]
