[project]
name = "dq-agent"
version = "0.1.0"
description = "Conversational data quality framework with a curated rule registry and deterministic execution engine"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = [
    "connectorx>=0.3.0",
    "pyarrow>=15.0.0",  # connectorx hands results to polars as Arrow tables
]
agents = [
    "langchain>=0.3.0",                # init_chat_model: provider is a config string, not code
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",  # durable thread state for the CLI/Streamlit driver
    # NB (feat/bedrock-proxy-adapter): this branch is air-gapped with no npm mirror, so the
    # agent-chat-ui demo path is dropped. The interface is a local in-process driver instead:
    # the CLI in `scripts/scoping_cli.py` (optionally a Streamlit chat panel), each of which
    # compiles the graph with its own checkpointer. `langgraph-cli` (the `langgraph dev`
    # server) is therefore not a dependency here.
    # NB: this branch's default model is DeptBedrockChat, which calls the internal
    # `dwutils.bedrock` proxy. `dwutils` is an internal package, not on PyPI, so it is NOT
    # listed here — it is expected to be importable in the work environment.
    # langchain-google-genai is dropped (no Gemini path on this branch).
]
ui = [
    "streamlit>=1.40",  # chat panel for the scoping agent (app/scoping_app.py); npm-free
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dq_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live LLM call — requires DQ_AGENT_MODEL env var (deselected by default)",
]
